# planner-log

./: .gitignore  app.py  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
api/: app.py  config.py  models.py  pyproject.toml  serializers.py
api/auth/: helper.py  routes.py
api/migrations/versions/: 00481b4aee6d_create_tables_daily_entry_daily_task_.py  0bf17bf070d3_update_table_task_status_add_default_.py  2e7b6c1a1a92_create_tables_tag_task_tag.py  3c2f1b6a5e5a_create_table_user.py  5b2d50882aaf_create_table_task.py  6a24122a94bf_create_table_task_clock.py  6b03990a6cf0_update_table_daily_entry_date_created_.py  9030aff8bcab_modify_table_task_add_detail_columns.py  a6f6661e9ecc_update_table_tag_add_user_id_column.py  e56d8ac700e9_create_table_task_status.py
api/planner/: routes.py
api/task/: routes.py  serializers.py
src/: App.vue  main.js  router.js
src/components/: LoginForm.vue  ModalWindow.vue  TaskCreator.vue  TheSidenav.vue  TimerDisplay.vue
src/components/tasks/: TaskDetail.vue  TaskEditor.vue  TaskForm.vue  TaskList.vue  TaskListItem.vue  TaskModal.vue  TaskStatusEditor.vue  TaskTimer.vue
src/components/ui/: ModalWindow.vue  StatusIndicator.vue
src/components/ui/data/: DataTable.vue  DataTableEditor.vue
src/components/ui/inputs/: CheckboxInput.vue  TextArea.vue  TextInput.vue  TextSelect.vue
src/pages/: DailyPage.vue  HomePage.vue  LoginPage.vue  SettingsPage.vue  TaskPage.vue
src/services/: PlannerApi.js  TaskApi.js  UserAuth.js
src/store/: Task.js  User.js
