[tool.poetry]
name = "planner-log"
version = "0.1.0"
description = ""
authors = ["ageonic <angeorge.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-RESTful = "^0.3.9"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
